更正配置文件位置